--- a/modules/custom/rsvplist/rsvplist.links.menu.yml
+++ b/modules/custom/rsvplist/rsvplist.links.menu.yml
@@ -1,6 +1,17 @@
+# This file is used to add custom links in Drupal's config page
+# The value of "parent" will determine where the link will be displayed
+# Ex. system.admin_reports will display the new link in the reports page
+
 rsvplist.admin_settings:
   title: 'RSVP List Settings'
   description: 'Control the display of RSVP Form'
   route_name: rsvplist.admin_settings
   parent: system.admin_config_content
   weight: 10
+
+rsvplist.report:
+  title: 'List of RSVP submissions'
+  description: 'View listing of RSVPs'
+  route_name: rsvplist.report
+  parent: system.admin_reports
+  weight: 0
